--- a/bitnami/keycloak/values.yaml
+++ b/bitnami/keycloak/values.yaml
@@ -983,6 +983,13 @@ keycloakConfigCli:
   ## @param keycloakConfigCli.extraEnvVarsSecret Secret with extra environment variables
   ##
   extraEnvVarsSecret: ""
+  ## @param keycloakConfigCli.extraEnvVarsSecrets Extra secrets to be set as env vars on Keycloak Container
+  ## Example:
+  ## extraEnvVarsSecrets:
+  ##  - secretRef:
+  ##      name: "bar"
+  ##
+  extraEnvVarsSecrets: []
   ## @param keycloakConfigCli.extraVolumes Extra volumes to add to the job
   ##
   extraVolumes: []
